--- a/style.css
+++ b/style.css
@@ -1,3 +1,72 @@
-#container {
-  background-color: red;
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+.logo {
+  width: 100px;
+  padding: 10px;
+}
+
+.nav-items {
+  padding: 0px 20px;
+}
+.nav-items > ul {
+  display: flex;
+  list-style-type: none;
+  font-size: 24px;
+}
+.nav-items > ul > li {
+  margin: 10px;
+  padding: 10px;
+}
+.res-container {
+  display: flex;
+  margin: 10px;
+}
+.res-card {
+  width: 200px;
+  padding: 5px;
+  background-color: #f0f0f0;
+  margin: 10px;
+}
+.res-card h4 {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+}
+
+.res-card:hover {
+  cursor: pointer;
+  border: 1px solid black;
+}
+.search {
+  padding: 10px;
+}
+.res-logo {
+  width: 100%;
+}
+.filter {
+  display: flex;
+}
+.filter-btn {
+  margin: 10px;
+  cursor: pointer;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-cards {
+  margin: 20px;
+  width: 200px;
+  height: 300px;
+  background-color: #f0f0f0;
+}
+
+.login {
+  padding: 0 20px;
+  cursor: pointer;
 }
