--- a/style.css
+++ b/style.css
@@ -20,8 +20,12 @@
   margin: 10px;
   padding: 10px;
 }
+.nav-items > ul > li > a {
+  color: purple;
+}
 .res-container {
   display: flex;
+  flex-wrap: wrap;
   margin: 10px;
 }
 .res-card {
@@ -69,4 +73,9 @@
 .login {
   padding: 0 20px;
   cursor: pointer;
+}
+
+.user-card {
+  padding: 10px;
+  border: 1px solid black;
 }
